[metadata]
name = rydiqule
version = attr: rydiqule.__version__
description = Rydberg Sensor Interactive Quantum Physics Module
long_description = file: README.md
long_description_content_type = text/markdown
author = ARL and NAWCWD
keywords = 
    rydberg
    atomic-physics
    quantum-optics
    atomic-sensors
    electrometry
license = Apache
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >= 3.8
install_requires =
    arc-alkali-rydberg-calculator
    numpy
    scipy>=0.19.1
    matplotlib
    numbakit-ode
    numba
    cyrk>=0.5.3
    networkx
    psutil
[options.packages.find]
where = src

[options.extras_require]
docs =
    Sphinx==5.0.2
    sphinx-rtd-theme==1.1.1
    nbconvert
    pandoc
    ipython
tests =
    pytest
    coverage
    pytest-cov
mypy = 
    mypy
    numpy>=1.21
    lxml
linter =
    flake8
